@@ -10,6 +10,8 @@ build_requires:
   Test::More: 0
   Test::NoWarnings: 0
 configure_requires:
+  Alien::Base::Wrapper: '1.97'
+  Alien::DjVuLibre: 0
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
@@ -26,6 +28,7 @@ no_index:
     - t
     - xt
 requires:
+  Alien::DjVuLibre: 0.05
   Error::Pure: 0.15
   Exporter: 0
   File::Which: 0
